[tool.poetry]
name = "mutation"
version = "0.4.7"
description = "test mutations for pytest."
authors = ["Amirouche <amirouche@hyper.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://git.sr.ht/~amirouche/mutation"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.*"
aiostream = "^0.4.*"
docopt = "^0.*"
lsm-db = "^0.*"
parso = "^0.*"
lexode = "0.*"
zstandard = {extras = ["cffi"], version = "^0.15.1"}
python-ulid = "^1.*"
pytest-cov = "^2.*"
pytest-randomly = "^3.*"
humanize = "^3.*"
astunparse = "^1.*"
tqdm = "^4.*"
pytest = "^6.*"
pathlib3x = "^1.*"
Pygments = "^2.*"
termcolor = "^1.*"
pytest-xdist = "^2.*"
Cython = "^0.29.26"

[tool.poetry.dev-dependencies]
debug = "^0.*"
tbvaccine = "^0.*"
black = "^20.*"
isort = "^5.*"

[tool.poetry.scripts]
mutation = "mutation:main"

[tool.poetry.plugins.pytest11]
mutation = "mutation"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
